[metadata]
name = Database Automator
version = 0.0.3
author = shaheennabi
author_email = ishaheennabi333@gmail.com
description = A Python package for connecting with databases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaheennabi/Unified-Database-Connector-Package
license = MIT
license_file = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7
packages = find:  # Automatically find packages in src
package_dir =
    = src  # Packages are in the src/ directory

[options.extras_require]
testing =
    pytest>=7.1.3,<8
    mypy>=0.971,<1
    flake8>=5.0.4,<6
    tox>=3.25.1,<4
    black>=22.8.0,<23

[options.package_data]
Unified-Database-Connector = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
